# b12x

./: .gitignore  README.md  b12x-dsv4-patch-spec.md  b12x-vllm-integration-spec.md  path-a-scoping.md  pyproject.toml
b12x/: __init__.py  runtime_control.py
benchmarks/: bench_bf16_to_fp4_tma.py  bench_dsv4_decode.py  benchmark_attention.py  benchmark_dense_gemm.py  benchmark_mla.py  benchmark_moe.py  benchmark_mxfp8_pv.py  benchmark_nsa_indexer.py  benchmark_paged_attention.py  benchmark_sparse_moe_api.py  common.py  probe_fp8_pv_layout.py  probe_paged_bf16_p_regs.py  probe_paged_bf16_pv_regs.py  probe_paged_bf16_smem_layout.py  probe_paged_fp8_p_regs.py  probe_paged_fp8_pv_regs.py  probe_paged_fp8_s_regs.py  probe_tma_cute_fp8_planes.py  probe_tma_paged_fp8_decode_transport.py  probe_tma_paged_fp8_rowoffset.py  probe_tma_raw_live_layout.cu  search_bf16_decode2048_optuna.py  sweep_paged_bf16_split_pages.py  sweep_paged_bf16_tma_swizzles.py  verify_moe_perf.py
docs/: attention_benchmark_qwen35_decode_plan.md  attention_split_kv_roadmap.md
experiments/: verify_static_tile_tp1.py
komodo-scripts/: create_b12x_build.py  create_b12x_stacks.py  patch_v4_b12x.py
scripts/: capture_dsv4_decode_tensors.py  probe_dsv4_attn_sink.py  sweep_decode_graph_policy.py
serve/: __init__.py  cli.py  logging.py  runtime_warnings.py
tests/: test_attention_cuda_graphs.py  test_attention_mla_api.py  test_attention_mla_mxfp8_probe.py  test_attention_mla_reference.py  test_attention_mla_sglang_boundary.py  test_attention_nsa_backend_sglang_boundary.py  test_attention_nsa_indexer_api.py  test_attention_nsa_indexer_sglang_boundary.py  test_attention_paged_api.py  test_attention_paged_forward.py  test_attention_paged_planner.py  test_attention_workspace_api.py  test_b12x_stream_ordering.py  test_b12x_stream_overlap.py  test_benchmark_mla.py  test_benchmark_paged_attention.py  test_cutlass_runtime_patches.py  test_fp8_bf16_sanity.py  test_mla_dsv4_kernel.py  test_mla_dsv4_smoke.py  test_moe_equivalence.py  test_moe_launch_param_regression.py  test_paged_attention_workspace_api.py  test_runtime_control.py  test_tp_moe_reference.py  (+2 more)
(+66 files in other folders)
